--- a/apps/zui/src/views/pool-page/index.module.css
+++ b/apps/zui/src/views/pool-page/index.module.css
@@ -16,6 +16,7 @@
     position: sticky;
     top: 0;
     border-bottom: 1px solid var(--border-color);
+    background-color: var(--bg-color);
 }
 
 .headerContent {
